# WebAssemblyInterpreterCpp

./: .gitignore  CMakeLists.txt  README.md  README_WINDOWS_VSCODE.md
docs/: IMPLEMENTATION.md  MISSING.md
examples/: run_wat_module.cpp
include/wasm/: binary_reader.hpp  interpreter.hpp  module.hpp  module_loader.hpp  types.hpp
projects/: bubble_sort.c  bubble_sort_c.wat  hello_c.wat  hello_projects.wat  read_file.wat  sample_input.txt
src/: interpreter.cpp  module_loader.cpp
tests/cpp/: test_main.cpp
tests/custom_tests/: custom_imports.wat
tests/wat/: 08_test_post_mvp.wat
wabt/: CMakeLists.txt  README.md
